Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13440

[C++] UBSAN error "applying non-zero offset to null pointer"

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • None
    • C++

    Description

      Clang's ubsan considers a non-zero offset being added to a null pointer to be undefined behavior.  This causes ubsan violations in our test suites if you are using clang-10 or higher.

      This was not detected by CI since CI uses clang-8 and this check was added in clang-10 [1][2].

       

       [1] https://reviews.llvm.org/D67122

       [2] https://releases.llvm.org/10.0.0/tools/clang/docs/ReleaseNotes.html#undefined-behavior-sanitizer-ubsan

       

      Attachments

        Activity

          People

            westonpace Weston Pace
            westonpace Weston Pace
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 10m
                1h 10m