cpp/src/arrow/util/bit_run_reader.h
@@ -196,6 +196,7 @@ class BaseSetBitRunReader {
   /// \param[in] start_offset bit offset into the source data
   /// \param[in] length number of bits to copy
   ARROW_NOINLINE
+  ARROW_DISABLE_UBSAN("pointer-overflow")
   BaseSetBitRunReader(const uint8_t* bitmap, int64_t start_offset, int64_t length)
       : bitmap_(bitmap),
         length_(length),
